plugins {
    id 'application'
    id "org.openjfx.javafxplugin" version "0.0.13"
}

sourceCompatibility = JavaVersion.VERSION_18
targetCompatibility = JavaVersion.VERSION_18

tasks.withType(JavaCompile).all {
    options.compilerArgs += ['--enable-preview']
}
tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

javafx {
    version = "18.0.2"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation('org.junit.jupiter:junit-jupiter-api:5.9.0',
            'org.assertj:assertj-core:3.23.1')
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
}

test {
    useJUnitPlatform()
}

application {
    mainClassName = "viewer.MainAppLauncher"
}